SGLANG/sglang-epp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sglang-epp-epp
  namespace: default
  labels:
    app.kubernetes.io/name: sglang-epp-epp
spec:
  type: ClusterIP
  selector:
    app: sglang-epp
  ports:
  - name: grpc-ext-proc
    port: 9002
    targetPort: 9002
    appProtocol: kubernetes.io/h2c
  - name: http-metrics
    port: 9090
    targetPort: 9090
